# superconducting-circuits-tutorial

./: .env.example  .gitignore  .pre-commit-config.yaml  Manifest.toml  Project.toml  README.md  juliapkg.json  mkdocs.yml  openapi.json  package.json  pyproject.toml  test_sim.py  test_vf_qc.py  test_vf_shape.py  update_en.py  update_zensical.py  utils.jl  zensical.en.toml  zensical.toml  zensical.yml
JPA_Analysis/: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
JPA_Analysis/data/: .gitkeep
JPA_Analysis/data/preprocessed/: .gitkeep
JPA_Analysis/data/processed/: .gitkeep
JPA_Analysis/data/processed/reports/: .gitkeep
JPA_Analysis/data/raw/: .gitkeep
JPA_Analysis/data/raw/circuit_simulation/: .gitkeep
JPA_Analysis/data/raw/layout_simulation/: .gitkeep
JPA_Analysis/data/raw/measurement/: .gitkeep
JPA_Analysis/docs/: index.md
JPA_Analysis/docs/explanation/physics/: resonance-extraction.md  squid-jpa-basics.md
JPA_Analysis/docs/explanation/pipeline/: data-flow.md  index.md  preprocessing-rationale.md
JPA_Analysis/docs/how-to/: index.md
JPA_Analysis/docs/how-to/extend/: add-data-source.md
JPA_Analysis/docs/how-to/preprocess/: hfss-admittance.md  hfss-phase.md  index.md
JPA_Analysis/docs/reference/: index.md
JPA_Analysis/docs/reference/cli/: convert-hfss-admittance.md  convert-hfss-phase.md  index.md  plot-admittance.md
JPA_Analysis/docs/reference/data-formats/: index.md  raw-data-layout.md
JPA_Analysis/docs/reference/guardrails/: code-style.md  type-checking.md
JPA_Analysis/docs/tutorials/: flux-analysis.md  index.md  simulation-workflow.md
JPA_Analysis/scripts/: check_docs.py
JPA_Analysis/src/: __init__.py  types.py
JPA_Analysis/src/extraction/: __init__.py  admittance.py  cleaning.py  phase.py
JPA_Analysis/src/models/: __init__.py  squid_model.py  y11_admittance.py
JPA_Analysis/src/optimizer/: __init__.py  fit_modes.py  fit_y11.py
JPA_Analysis/src/preprocess/: convert_flux_dependence.py  convert_hfss_admittance.py  convert_hfss_phase.py  loader.py  naming.py  record_utils.py  schema.py
JPA_Analysis/src/scripts/: __init__.py  admittance_fit.py  admittance_fit_with_fixed_c.py  admittance_zero_crossings.py  effective_capacitance_fit.py  flux_dependence_plot.py  plot_admittance.py  plot_comparison.py  q_factor_tool.py  resonance_fit.py
JPA_Analysis/src/utils/: __init__.py  paths.py  plotting.py
JPA_Analysis/src/visualization/: __init__.py  dataframe_display.py  flux_plots.py  plot_utils.py  resonance_plot.py  y11_plot.py
JPA_Analysis/tests/: conftest.py  test_naming_boundary.py
JPA_Analysis/tests/unit/models/: test_squid_model.py
JPA_Analysis/tests/unit/utils/: test_paths.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260312_0001_rewrite_storage_metadata_baseline.py  20260312_0002_rewrite_task_snapshot_baseline.py  20260312_0003_rewrite_task_dispatch_baseline.py  20260313_0004_rewrite_task_event_log_baseline.py
backend/sc_backend/: __init__.py  errors.py  rewrite_cli.py
backend/src/: __init__.py
backend/src/app/: __init__.py  main.py  settings.py
backend/src/app/api/: errors.py  router.py
backend/src/app/domain/: audit.py  circuit_definitions.py  datasets.py  health.py  schemdraw_render.py  session.py  storage.py  tasks.py
backend/src/app/infrastructure/: rewrite_app_state_repository.py  rewrite_catalog_repository.py  rewrite_execution_runtime.py  rewrite_processor_runtime_repository.py  rewrite_task_audit_repository.py  rewrite_task_repository.py  runtime.py  secret_management.py  session_jwt_transport.py  storage_reference_factory.py
backend/src/app/services/: audit_log_service.py  circuit_definition_service.py  dataset_service.py  health_service.py  schemdraw_render_service.py  service_errors.py  session_service.py  task_service.py
backend/tests/: conftest.py  test_audit_logs.py  test_characterization_registry_history_integration.py  test_characterization_results_integration.py  test_characterization_tagging_integration.py  test_definition_authoring_integration.py  test_health.py  test_persistence_baseline.py  test_rewrite_catalog.py  test_sc_core_adoption.py  test_sc_core_execution.py  test_sc_core_storage.py  test_sc_core_tasking.py  test_secret_management.py  test_service_error_boundaries.py  test_session_and_tasks.py  test_storage_repository_baseline.py  test_storage_runtime_adoption.py  test_task_snapshot_repository_baseline.py
cli/: README.md  pyproject.toml
cli/src/sc_cli/: __init__.py  __main__.py  app.py  errors.py  local_circuit_definitions.py  local_interchange.py  local_runtime.py  local_store.py  local_views.py  output.py  presenters.py  runtime.py  task_operator.py
cli/src/sc_cli/commands/: __init__.py  characterization.py  circuit_definition.py  core.py  datasets.py  events.py  ops.py  results.py  session.py  simulation.py  tasks.py
cli/tests/: conftest.py  test_app.py  test_persisted_local_runtime_store.py  test_standalone_circuit_definition.py
src/core/: pyproject.toml
src/core/analysis/domain/: __init__.py  trace_records.py  value_objects.py
src/core/analysis/infrastructure/: paths.py
src/core/sc_core/: __init__.py
src/core/sc_core/circuit_definitions/: __init__.py  inspection.py
src/core/sc_core/execution/: __init__.py  contracts.py
src/core/sc_core/storage/: __init__.py  contracts.py  evolution.py
src/core/sc_core/tasking/: __init__.py  routing.py  runtime.py
src/core/shared/: __init__.py  logging.py
src/core/shared/persistence/: __init__.py  database.py  models.py  reconcile.py  startup_reconcile.py  trace_store.py  unit_of_work.py
src/core/shared/utils/: units.py
src/core/shared/visualization/: __init__.py  figure_builders.py  plotly_theme.py
src/core/simulation/: __init__.py
src/core/simulation/application/: __init__.py  circuit_visualizer.py  layout_plan.py  post_processing.py  run_simulation.py  trace_architecture.py
src/core/simulation/domain/: __init__.py  circuit.py  compiler.py  ir.py  validators.py
src/core/simulation/infrastructure/: __init__.py  hbsolve.jl  (+1 more)
(+1108 files in other folders)
