[project]
name = "superconducting-circuits-tutorial"
version = "0.1.0"
description = "Superconducting Circuit Simulation and Analysis Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.7.0",
    "juliacall>=0.9.31",
    "lmfit>=1.3.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "plotly>=5.22.0",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "schemdraw>=0.22",
    "scipy>=1.16.3",
    "sqlmodel>=0.0.31",
    "typer>=0.12.0",
]

[project.scripts]
sc-preprocess-admittance = "scripts.preprocessing.convert_hfss_admittance:app"
sc-preprocess-phase = "scripts.preprocessing.convert_hfss_phase:app"
sc-convert-flux-dependence = "scripts.preprocessing.convert_flux_dependence:app"
sc-fit-squid = "scripts.analysis.squid_fit:app"
sc-simulate-lc = "scripts.simulation.run_lc:app"
sc-db = "scripts.database.manage_db:app"
sc-docs-cli = "scripts.docs.generate_cli_reference:app"
sc-docs-cli-sync = "scripts.docs.sync_cli_reference:app"
sc = "scripts.cli.entry:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "scripts*"]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "data"]
extraPaths = ["src"]
# Basic presence checks only, as requested
reportMissingParameterType = "warning"
reportUnknownParameterType = "none" # Allow unknown types from 3rd party libs

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "N802", # Function name should be lowercase (Physics: T_c, I_c)
    "N803", # Argument name should be lowercase (Physics: L_jun, C_pF)
    "N806", # Variable in function should be lowercase (Physics: L_tot)
    "N813", # Camelcase imported as lowercase (juliacall Main as jl)
    "N816", # Variable in global scope mixedCase (Physics units: nH, pF)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "zensical>=0.0.21",
]
