[project]
name = "superconducting-circuits-tutorial"
version = "0.1.0"
description = "Superconducting Circuit Simulation and Analysis Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.7.0",
    "juliacall>=0.9.31",
    "lmfit>=1.3.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "plotly>=5.22.0",
    "nicegui>=2.0",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "schemdraw>=0.22",
    "scikit-rf>=1.10.0",
    "scipy>=1.16.3",
    "rq>=2.6.0",
    "sqlmodel>=0.0.31",
    "typer>=0.12.0",
    "zarr>=3.1.3",
    "httpx>=0.28.1",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
]

[project.scripts]
sc = "scripts.cli.entry:app"
sc-app = "app.main:start"
sc-worker-simulation = "worker.simulation_worker:main"
sc-worker-characterization = "worker.characterization_worker:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "core*", "scripts*", "worker*"]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "data"]
extraPaths = ["src"]
# Basic presence checks only, as requested
reportMissingParameterType = "warning"
reportUnknownParameterType = "none" # Allow unknown types from 3rd party libs

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "N802", # Function name should be lowercase (Physics: T_c, I_c)
    "N803", # Argument name should be lowercase (Physics: L_jun, C_pF)
    "N806", # Variable in function should be lowercase (Physics: L_tot)
    "N813", # Camelcase imported as lowercase (juliacall Main as jl)
    "N816", # Variable in global scope mixedCase (Physics units: nH, pF)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "fakeredis>=2.32.1",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "zensical>=0.0.21",
]
