[project]
name = "sc-cli"
version = "0.1.0"
description = "Rewrite CLI adapter package for superconducting circuits workflows."
requires-python = ">=3.12"
dependencies = [
    "sc-core",
    "superconducting-circuits-backend",
    "typer>=0.12.0",
]

[project.scripts]
sc = "sc_cli.app:app"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["src", "tests"]
extraPaths = ["src", "../backend"]
reportMissingTypeStubs = "none"

[tool.uv.sources]
sc-core = { path = "../src/core", editable = true }
superconducting-circuits-backend = { path = "../backend", editable = true }

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sc_cli*"]
