[project]
name = "sc-core"
version = "0.1.0"
description = "Shared framework-agnostic core utilities for superconducting circuits workflows."
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sc_core*"]
